--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -233,7 +233,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -398,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -418,9 +422,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -486,9 +492,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -499,7 +507,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -527,9 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -537,56 +549,7 @@
      "output_type": "stream",
      "text": [
       "Number of samples for training:  59788\n",
-      "Number of samples for validation:  4410\n",
-      "(4410, 32, 32, 1)\n",
-      "[[[ 0.18823529]\n",
-      "  [ 0.04705882]\n",
-      "  [ 0.18823529]\n",
-      "  ..., \n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]]\n",
-      "\n",
-      " [[ 0.18823529]\n",
-      "  [ 0.04705882]\n",
-      "  [ 0.18823529]\n",
-      "  ..., \n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]]\n",
-      "\n",
-      " [[ 0.18823529]\n",
-      "  [ 0.04705882]\n",
-      "  [ 0.18823529]\n",
-      "  ..., \n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]\n",
-      "  [ 0.18823529]]\n",
-      "\n",
-      " ..., \n",
-      " [[ 0.51764706]\n",
-      "  [ 0.46666667]\n",
-      "  [ 0.51764706]\n",
-      "  ..., \n",
-      "  [ 0.18823529]\n",
-      "  [ 0.34901961]\n",
-      "  [ 0.34901961]]\n",
-      "\n",
-      " [[ 0.55294118]\n",
-      "  [ 0.5372549 ]\n",
-      "  [ 0.55294118]\n",
-      "  ..., \n",
-      "  [ 0.04705882]\n",
-      "  [ 0.18823529]\n",
-      "  [ 0.34901961]]\n",
-      "\n",
-      " [[ 0.56862745]\n",
-      "  [ 0.55294118]\n",
-      "  [ 0.56862745]\n",
-      "  ..., \n",
-      "  [ 0.18823529]\n",
-      "  [ 0.34901961]\n",
-      "  [ 0.46666667]]]\n"
+      "Number of samples for validation:  4410\n"
      ]
     }
    ],
@@ -598,9 +561,7 @@
     "X_train, y_train, X_valid = X_train_extended, y_train_extended, X_valid_normalized\n",
     "\n",
     "print('Number of samples for training: ', X_train.shape[0])\n",
-    "print('Number of samples for validation: ', X_valid.shape[0])\n",
-    "print(X_valid.shape)\n",
-    "print(X_valid[0])"
+    "print('Number of samples for validation: ', X_valid.shape[0])"
    ]
   },
   {
