--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -272,7 +272,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1394,13 +1396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Manually evaluated accuracy of the model for 5 new signs: 100.0 %\n"
+     ]
+    }
+   ],
    "source": [
     "### Calculate the accuracy for these 5 new images. \n",
     "### For example, if the model predicted 1 out of 5 signs correctly, it's 20% accurate on these new images.\n",
@@ -1469,22 +1479,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TopKV2(values=array([[  9.99999762e-01,   1.86636726e-07,   5.70514693e-08,\n",
+      "          2.66286704e-09,   5.31576838e-10],\n",
+      "       [  1.00000000e+00,   5.98676816e-13,   6.14418430e-15,\n",
+      "          4.04601010e-16,   3.82449458e-16],\n",
+      "       [  9.99999404e-01,   6.12642452e-07,   9.19019201e-12,\n",
+      "          4.46458712e-12,   4.07592970e-12],\n",
+      "       [  1.00000000e+00,   1.67189498e-08,   1.33145037e-10,\n",
+      "          9.64963665e-11,   7.48757306e-11],\n",
+      "       [  9.99999166e-01,   8.01552460e-07,   1.48900536e-08,\n",
+      "          1.89003257e-11,   1.39726758e-13]], dtype=float32), indices=array([[10,  9,  2,  7, 40],\n",
+      "       [11, 30, 28, 25, 35],\n",
+      "       [14, 39, 40,  1, 12],\n",
+      "       [ 9, 10,  5,  3,  7],\n",
+      "       [ 1,  0,  4,  2,  8]], dtype=int32))\n"
+     ]
+    }
+   ],
    "source": [
     "keep_drop_out = 1.0\n",
     "predicted_labels = tf.nn.softmax(logits)\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet_model_save')\n",
-    "    output = sess.run(inferred_signs, feed_dict={x:images_sample_normalized})\n",
+    "    output = sess.run(predicted_labels, feed_dict={x:images_sample_normalized})\n",
     "    final_out = sess.run(tf.nn.top_k(output, k=5))\n",
     "    print(final_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10] No passing for vehicles over 3.5 metric tons\n",
+      "Prob 10: 99.99998\n",
+      "Prob 9: 0.00002\n",
+      "Prob 2: 0.00001\n",
+      "Prob 7: 0.00000\n",
+      "Prob 40: 0.00000\n",
+      "--------------------\n",
+      "[11] Right-of-way at the next intersection\n",
+      "Prob 11: 100.00000\n",
+      "Prob 30: 0.00000\n",
+      "Prob 28: 0.00000\n",
+      "Prob 25: 0.00000\n",
+      "Prob 35: 0.00000\n",
+      "--------------------\n",
+      "[14] Stop\n",
+      "Prob 14: 99.99994\n",
+      "Prob 39: 0.00006\n",
+      "Prob 40: 0.00000\n",
+      "Prob 1: 0.00000\n",
+      "Prob 12: 0.00000\n",
+      "--------------------\n",
+      "[9] No passing\n",
+      "Prob 9: 100.00000\n",
+      "Prob 10: 0.00000\n",
+      "Prob 5: 0.00000\n",
+      "Prob 3: 0.00000\n",
+      "Prob 7: 0.00000\n",
+      "--------------------\n",
+      "[1] Speed limit (30km/h)\n",
+      "Prob 1: 99.99992\n",
+      "Prob 0: 0.00008\n",
+      "Prob 4: 0.00000\n",
+      "Prob 2: 0.00000\n",
+      "Prob 8: 0.00000\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "probs = final_out[0]\n",
+    "classnames = final_out[1]\n",
+    "for row, name in zip(probs, classnames):\n",
+    "    print('[{}] {}'.format(name[0], sign_names[name[0]]))\n",
+    "    for prob, n in zip(row, name):\n",
+    "        print('Prob {}: {:.5f}'.format(n, prob * 100))\n",
+    "    print('--------------------')"
    ]
   },
   {
